WIP: Mockup progress

--- a/src/config/styles/index.css
+++ b/src/config/styles/index.css
@@ -17,4 +17,6 @@
     --color-iceberg: #73ABCF;
     --color-timberwolf :#DDDDD0;
     --color-custom-gray: #B9B9B9;
+    --color-philippine-gray: #909090;
+    --color-light-gray: #D4D4CE;
 }
